// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reduceViewState creates view state for empty block in between 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "O",
          },
          "text": "One",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "O",
        },
        Object {
          "char": "n",
        },
        Object {
          "char": "e",
        },
      ],
    },
    Object {
      "blockKey": "block-2",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [],
      "styles": Array [],
      "value": Array [],
    },
    Object {
      "blockKey": "block-3",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "T",
          },
          "text": "Two",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "T",
        },
        Object {
          "char": "w",
        },
        Object {
          "char": "o",
        },
      ],
    },
  ],
}
`;

exports[`reduceViewState creates view state for nested blocks 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [
        Object {
          "blockKey": "block-2",
          "blockLevel": 1,
          "blocks": Array [],
          "fragments": Array [
            Object {
              "data": Object {
                "char": "T",
              },
              "text": "Two",
            },
          ],
          "styles": Array [],
          "value": Array [
            Object {
              "char": "T",
            },
            Object {
              "char": "w",
            },
            Object {
              "char": "o",
            },
          ],
        },
        Object {
          "blockKey": "block-3",
          "blockLevel": 1,
          "blocks": Array [],
          "fragments": Array [
            Object {
              "data": Object {
                "char": "T",
              },
              "text": "Three",
            },
          ],
          "styles": Array [],
          "value": Array [
            Object {
              "char": "T",
            },
            Object {
              "char": "h",
            },
            Object {
              "char": "r",
            },
            Object {
              "char": "e",
            },
            Object {
              "char": "e",
            },
          ],
        },
      ],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "O",
          },
          "text": "One",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "O",
        },
        Object {
          "char": "n",
        },
        Object {
          "char": "e",
        },
      ],
    },
    Object {
      "blockKey": "block-4",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "F",
          },
          "text": "Four",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "F",
        },
        Object {
          "char": "o",
        },
        Object {
          "char": "u",
        },
        Object {
          "char": "r",
        },
      ],
    },
  ],
}
`;

exports[`reduceViewState creates view state with fragments in between block boundaries 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "H",
          },
          "text": "Hi",
        },
        Object {
          "data": undefined,
          "fragments": Array [
            Object {
              "data": Object {
                "char": "Y",
              },
              "text": "Yo",
            },
          ],
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "H",
        },
        Object {
          "char": "i",
        },
        Object {
          "char": "Y",
        },
        Object {
          "char": "o",
        },
      ],
    },
    Object {
      "blockKey": "block-2",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "W",
          },
          "text": "Wh",
        },
        Object {
          "data": Object {
            "char": "o",
          },
          "text": "o",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "W",
        },
        Object {
          "char": "h",
        },
        Object {
          "char": "o",
        },
      ],
    },
  ],
}
`;

exports[`reduceViewState creates view state with nested fragments 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "O",
          },
          "text": "O",
        },
        Object {
          "data": undefined,
          "fragments": Array [
            Object {
              "data": Object {
                "char": "n",
              },
              "text": "n",
            },
            Object {
              "data": Object {
                "some": "a",
              },
              "fragments": Array [
                Object {
                  "data": Object {
                    "char": "e",
                  },
                  "text": "e ",
                },
              ],
            },
            Object {
              "data": Object {
                "char": "T",
              },
              "text": "TWo",
            },
          ],
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "O",
        },
        Object {
          "char": "n",
        },
        Object {
          "char": "e",
        },
        Object {
          "char": " ",
        },
        Object {
          "char": "T",
        },
        Object {
          "char": "W",
        },
        Object {
          "char": "o",
        },
      ],
    },
  ],
}
`;

exports[`reduceViewState maintains block entities 1`] = `
Object {
  "blocks": Array [
    Object {
      "blockKey": "block-1",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "1",
          },
          "text": "1",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "1",
        },
      ],
    },
    Object {
      "blockKey": "block-2",
      "blockLevel": 0,
      "blocks": Array [],
      "fragments": Array [
        Object {
          "data": Object {
            "char": "2",
          },
          "text": "2",
        },
      ],
      "styles": Array [],
      "value": Array [
        Object {
          "char": "2",
        },
      ],
    },
  ],
}
`;
